--- a/Analysis-accessory.Rmd
+++ b/Analysis-accessory.Rmd
@@ -323,7 +323,6 @@ mtext(text="seed count,",side=2,line=1.3,outer=FALSE,cex=0.8)
 mtext(text="scaled to plant size",side=2,line=0.4,outer=FALSE,cex=0.8)
 mtext(text="reproductive costs",side=1,line=0.3,outer=FALSE,cex=0.8)
 mtext(text="(mg/seed)",side=1,line=1.2,outer=FALSE,cex=0.8)
-#extra.top.left("b",2,1)
 
 plot(0,0,ylim=c(0,1),yaxt="n",xaxt="n",xlim=c(0,1),col="white",xlab="",ylab="")
 segments(x0=.1,x1=.8,y0=.8,y1=.1,lty=1)
@@ -335,7 +334,6 @@ mtext(text="mature ovules count,",side=2,line=1.3,outer=FALSE,cex=0.8)
 mtext(text="scaled to plant size",side=2,line=0.4,outer=FALSE,cex=0.8)
 mtext(text="pollen attraction costs",side=1,line=0.3,outer=FALSE,cex=0.8)
 mtext(text="(mg/seed)",side=1,line=1.2,outer=FALSE,cex=0.8)
-#extra.top.left("c",2,1)
 
 plot(0,0,ylim=c(0,1),yaxt="n",xaxt="n",xlim=c(0,1),col="white",xlab="",ylab="")
 segments(x0=.1,x1=.9,y0=.9,y1=.1,lty=1)
@@ -348,7 +346,7 @@ mtext(text="(ovule:seed)",side=2,line=0.4,outer=FALSE,cex=0.8)
 mtext(text="pollen attraction costs,",side=1,line=0.3,outer=FALSE,cex=0.8)
 mtext(text="scaled to plant size",side=1,line=1.2,outer=FALSE,cex=0.8)
 mtext(text="(mg/seed)",side=1,line=2.1,outer=FALSE,cex=0.8)
-#extra.top.left("d",2,1)
+
 dev.off()
 
 # png("ms/Accessory/output/Figure01def_predictions.png", height=6, width=6, units="in", res=300)
@@ -410,16 +408,6 @@ line_function_log_xy(SummarySpp[["mean"]]$repro_costs,mod_seed,1,col=venetian_re
 line_function_log_xy(SummarySpp[["mean"]]$pollen_attract_costs,mod_ovule,1,col=cerulean)
 legend("bottomleft",legend=c("seed count by reproductive costs","mature ovules count by","pollen-attraction costs"),col=c(venetian_red,cerulean,"white"),pch=c(16,16,16),bty="n",cex=0.7)
 extra.top.left.logxy("a",2,1)
-
-
-plot(choosiness2~prop_pollen_attract_vs_all_repro,SummarySpp[["mean"]],log="xy",col=cerulean,pch=16,xlim=c(.002,.3),ylim=c(3,800),yaxt="n",cex=1,ylab="",xlab="",xaxt="n")
-axis(2, at=c(10,100,1000), labels=c(10,100,1000),cex.axis=0.8,las=2)
-axis(1, at=c(0.01,0.1), labels=c(0.01,0.1),cex.axis=0.8)
-mtext("pollen-attractions costs, scaled to leaf area",1,line=1.7,cex=0.7)
-mtext("choosiness (ovules:seed)",2,line=2.3,cex=0.7)
-#mod_choosy <- sma(choosiness2~scaled_pollen_attract_costs,data=subset(SummarySpp[["mean"]]),log="xy",slope=-1,method="SMA")
-mod_choosy2 <- sma(choosiness2~prop_pollen_attract_vs_all_repro,data=subset(SummarySpp[["mean"]],species!="EPMI"),log="xy",slope=-1,method="SMA")
-
 
 #panel b
 plot(choosiness2~scaled_pollen_attract_costs,SummarySpp[["mean"]],log="xy",col=cerulean,pch=16,xlim=c(.002,.3),ylim=c(3,800),yaxt="n",cex=1,ylab="",xlab="",xaxt="n")
@@ -500,6 +488,26 @@ line_function_log_xy(SummarySpp[["mean"]]$embryo_endo_costs,mod_pollen_attract_c
 line_function_log_xy(SummarySpp[["mean"]]$embryo_endo_costs,mod_provisioning_costs,1,col=venetian_red)
 
 dev.off()
+
+Figure2_summary <- dplyr::select(mod_seed$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI)
+
+Figure2_summary <- dplyr::bind_rows(Figure2_summary,
+  dplyr::select(mod_ovule$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI))
+
+Figure2_summary <- dplyr::bind_rows(Figure2_summary,
+  dplyr::select(mod_choosy2$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI))
+  
+Figure2_summary <- dplyr::bind_rows(Figure2_summary,
+  dplyr::select(mod_prop_prepollen_success$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI))
+  
+Figure2_summary <- dplyr::bind_rows(Figure2_summary,
+  dplyr::select(mod_prop_postpollen_success$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI))
+  
+Figure2_summary <- dplyr::bind_rows(Figure2_summary,
+  dplyr::select(mod_prop_pollen_attract_vs_success$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI))
+  
+Figure2_summary$names <- c("seed count by reproductive costs","mature ovule count by pollen attraction costs","choosiness by pollen-attraction costs","prop of pollen attraction to success by seed size","prop of provisioning to success by seed size","prop of successful investment to pollen attraction by seed size")
+
 ```
 
 
