--- a/ms/Accessory/Wenk-Accessory-SI.Rnw
+++ b/ms/Accessory/Wenk-Accessory-SI.Rnw
@@ -94,6 +94,7 @@ plot_graph <- function(graph) {
 
 
 \begin{document}
+\SweaveOpts{concordance=TRUE}
 
 %\maketitle
 
@@ -134,11 +135,11 @@ TableS15$species  <- paste("\\textit{",unique(TableS15$species),"}", sep="")
 \centering
 \caption{Species values for data plotted in Figure 2, shifts in reproductive tissue allocation with seed size.}
 \label{tab:species}
-\begin{tabular}{p{0.1cm}p{4cm}|p{1.5cm}|p{1.5cm}p{1.5cm}|p{1.5cm}p{1.5cm}|p{1.5cm}p{1.5cm}|p{1.5cm}p{1.5cm}|p{1.5cm}p{1.5cm}}
+\begin{tabular}{p{4cm}|p{1cm}|p{1.5cm}p{1cm}|p{1.5cm}p{1cm}|p{1.5cm}p{1cm}|p{1cm}p{1.5cm}|p{1.5cm}p{1.5cm}}
 \hline
-& \multicolumn{8}{c|}{Proportion} & \multicolumn{2}{c}{Proportion}& \multicolumn{2}{c}{Proportion} \\
-& \multicolumn{8}{c|}{pollen-attraction} & \multicolumn{2}{c}{provisioning}& \multicolumn{2}{c}{success} \\
-& \multicolumn{8}{c|}{investment to} & \multicolumn{2}{c}{investment to}& \multicolumn{2}{c}{investment to} \\
+& \multicolumn{7}{c|}{Proportion} & \multicolumn{2}{c}{Proportion}& \multicolumn{2}{c}{Proportion} \\
+& \multicolumn{7}{c|}{pollen-attraction} & \multicolumn{2}{c}{provisioning}& \multicolumn{2}{c}{success} \\
+& \multicolumn{7}{c|}{investment to} & \multicolumn{2}{c}{investment to}& \multicolumn{2}{c}{investment to} \\
 <<echo=FALSE, results='asis', warning=FALSE>>=
 print(xtable(TableS15)
         , sanitize.text.function=I
@@ -199,10 +200,10 @@ for(i in c(4,7,10)){
 \centering
 \caption{Shifts in accessory costs with shifts in age, plant size, or reproductive effort.}
 \label{tab:propagule_invest_vs_repro}
-\begin{tabular}{p{4cm}|x{.94cm}x{1cm}x{1.5cm}|x{.75cm}x{1cm}p{1.5cm}|x{.75cm}x{1cm}p{1.5cm}}
+\begin{tabular}{p{4cm}|x{.75cm}x{1cm}x{1.25cm}|x{.75cm}x{1cm}p{1.25cm}|x{.75cm}x{1cm}p{1.25cm}}
 \hline
-& \multicolumn{3}{c|}{Accessory costs} & \multicolumn{3}{c}{Accessory costs}& \multicolumn{3}{c}{Accessory costs} \\
-& \multicolumn{3}{c|}{vs. RE} & \multicolumn{3}{c}{vs. plant mass (mg)}& \multicolumn{3}{c}{vs. age} \\
+& \multicolumn{3}{c|}{Accessory costs} & \multicolumn{3}{c|}{Accessory costs}& \multicolumn{3}{c|}{Accessory costs} \\
+& \multicolumn{3}{c|}{vs. RE} & \multicolumn{3}{c|}{vs. plant mass (mg)}& \multicolumn{3}{c|}{vs. age} \\
 <<echo=FALSE, results='asis', warning=FALSE>>=
 print(xtable(TableS16)
         , sanitize.text.function=I
@@ -214,19 +215,6 @@ print(xtable(TableS16)
 \end{table}
 
 \clearpage
-
-% lines that previously created tableS16 - will delete once new version working
-% print(xtable(TableS2,
-%                hline.after=c(1),
-%                align='p{0.1cm}p{4cm}|p{1.5cm}|p{1.5cm}p{1.5cm}|p{1.5cm}p{1.5cm}|p{1.5cm}p{1.5cm}|p{1.5cm}p{1.5cm}|p{1.5cm}p{1.5cm}',
-%                caption="Species values for data plotted in Figure 2",
-%                sanitize.text.function=I,
-%         , table.placement = "H"
-%         , caption.placement = "top"
-%         , include.rownames = FALSE
-%         , include.colnames = TRUE
-%         , size = "small"
-%         , floating = FALSE))
 
 <<echo=FALSE, warning=FALSE>>=
 
@@ -273,7 +261,7 @@ for(i in c(4,7)){
 \centering
 \caption{Intraspecific correlations between total reproductive investment and (a) propagule investment and (b) flower investment, where flower investment is defined as 'flower weight (mg) $\times$ bud count'}
 \label{tab:propagule_invest_vs_repro}
-\begin{tabular}{p{4cm}|x{.94cm}x{1cm}x{1.5cm}|x{.75cm}x{1cm}p{1.5cm}}
+\begin{tabular}{p{4cm}|x{.75cm}x{1cm}x{1.5cm}|x{.75cm}x{1cm}p{1.5cm}}
 \hline
 & \multicolumn{3}{c|}{Total reproductive investment} & \multicolumn{3}{c}{Total reproductive investment} \\
 & \multicolumn{3}{c|}{vs. propagule investment} & \multicolumn{3}{c}{vs. flower investment} \\
@@ -322,7 +310,7 @@ acc_by_species <- dplyr::bind_rows(acc_by_species,
 slopes <- sma(postpollen_aborted_costs ~ propagule_costs,data=subset(SummarySpp[["mean"]]),slope.test=1, log="xy",method="SMA")
 acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
-acc_by_species$variable = c("total reproductive costs","total accessory costs","seed costs","pollen attraction costs","provisioning costs", "failed tissues costs","failed pre-pollination costs","failed provisioning costs")
+acc_by_species$variable = c("total reproductive","total accessory","seed","pollen attraction","provisioning", "failed tissue","failed pre-pollination","failed provisioning")
 
 acc_by_species$Slope <- format(acc_by_species$Slope,nsmall=2,digits=2)
 acc_by_species$Slope_lowCI <- format(acc_by_species$Slope_lowCI,nsmall=2,digits=2)
@@ -336,12 +324,13 @@ acc_by_species$Slope_test_p <- format(acc_by_species$Slope_test_p,digits=2)
 acc_slopes <- dplyr::select(acc_by_species,variable,r2,slope2,Slope_test_p)
 }
 TableS19 <- make_table_Table2_using_propagule()
+names(TableS19) <- c("costs","r$^2$","slope (95% CI)","p (slope test)")
 @
 \begin{table}[H]
 \centering
 \caption{Scaling of reproductive tissue costs with total propagule size}
 \label{tab:propagule_invest_vs_repro}
-\begin{tabular}{p{4cm}|x{.94cm}x{3cm}p{1.5cm}}
+\begin{tabular}{p{5cm}|x{.75cm}x{3.5cm}p{1.5cm}}
 \hline
 <<echo=FALSE, results='asis', warning=FALSE>>=
 print(xtable(TableS19)
@@ -388,7 +377,7 @@ TableS18$species  <- paste("\\textit{",unique(TableS18$species),"}", sep="")
 \centering
 \caption{Count of buds initiated is well predicted by plant size}
 \label{tab:propagule_invest_vs_repro}
-\begin{tabular}{p{4cm}|x{.94cm}x{1cm}p{1.5cm}}
+\begin{tabular}{p{4cm}|x{.75cm}x{1cm}p{1.25cm}}
 \hline
 <<echo=FALSE, results='asis', warning=FALSE>>=
 print(xtable(TableS18)
@@ -409,8 +398,7 @@ print(xtable(TableS18)
 
 \section{Investment categories}
 
-accessoryParts.yml
-This file contains, for each species, lists of reproductive tissues that fall into various tissue categories=. These categories are then used to calculate the reproductive investment in the key reproductive tissue categories, (1) pollen-attraction tissues aborted prior to provisioning; (2) pollen-attraction tissues associated with flowers that form mature seeds; (3) provisioning tissues aborted prior to the formation of a mature seed; (4) packaging and dispersal tissues associated with a mature seed; (5) the mature seed itself. Dividing reproductive investment into these categories requires, for each tissue type, knowing the count of parts that reach the key stages (pollinator-ready, onset of provisioning, mature seed) and the mass of parts at each stage. 
+The file accessoryParts.yml contains, for each species, lists of reproductive tissues that fall into various tissue categories=. These categories are then used to calculate the reproductive investment in the key reproductive tissue categories, (1) pollen-attraction tissues aborted prior to provisioning; (2) pollen-attraction tissues associated with flowers that form mature seeds; (3) provisioning tissues aborted prior to the formation of a mature seed; (4) packaging and dispersal tissues associated with a mature seed; (5) the mature seed itself. Dividing reproductive investment into these categories requires, for each tissue type, knowing the count of parts that reach the key stages (pollinator-ready, onset of provisioning, mature seed) and the mass of parts at each stage. 
 
 \subsection{accessoryParts\_metadata}
 Brief descriptions of each reproductive parts category in the file accessoryParts.
@@ -419,7 +407,7 @@ Brief descriptions of each reproductive parts category in the file accessoryPart
   print_table_metadata("../../data/accessoryParts_meta.csv")
 @
 
-\subsection{investment categories by species}
+\subsection{investment categories by species in accessoryParts.yml}
 List for each species of reproductive tissue types included in each of the investment categories
 <<echo=FALSE,results='asis'>>=
   ###("../../data/accessoryParts.yml")
@@ -431,26 +419,31 @@ List of data files.
 
 The following files contain the empirical data used in the analyses: 
 
-accessory\_parts.yml
-flowerCategories.csv and flowerCategories\_meta.csv
-flowerParts.csv and flowerParts\_meta.csv
-individuals.csv and individuals\_meta.csv
-MultiplierTable.csv
-reproduction.csv and reproduction\_meta.csv
-seedMultiplier.csv
+\begin{enumerate}
+\item accessory\_parts.yml
+\item flowerCategories.csv and flowerCategories\_meta.csv
+\item flowerParts.csv and flowerParts\_meta.csv
+\item individuals.csv and individuals\_meta.csv
+\item MultiplierTable.csv
+\item reproduction.csv and reproduction\_meta.csv
+\item seedMultiplier.csv
+\end{enumerate}
 
 The following files contain supplmentary data about the species and sites:
-seedsize.csv and seedsize\_meta.csv
-sites.csv and sites\_meta.csv
-species.csv
 
-floweringCategories
+\begin{enumerate}
+\item seedsize.csv and seedsize\_meta.csv
+\item sites.csv and sites\_meta.csv
+\item species.csv
+\end{enumerate}
+
+\subsection{floweringCategories}
 This file contains a matrix of plant parts (rows) by species (columns). For each cell that is used on a given species plant map, the meaning of the values in the spreadsheet titled "reproduction" are indicated in this spreadsheet. Possible method are (1) count, indicating that the numbers represent simple counts; (2) count\_by\_length, indicating that the length of stem or cone covered with buds, flowers or fruit is measured; (3) regress\_by\_dim, indicating that the dimensions of the flowering part are measured and must be converted to a dry mass using a regression equation; and (4) volume, indicating that the height and diameter of the flowering part are given and must be converted to a dry mass using the calculated volume of the flowering part multiplied by the average density of the flowering part.
 
-floweringCategories\_metadata
+\subsection{floweringCategories\_metadata}
 This files contains a matrix of plant parts (rows) by species (columns). For each cell that is used on a given species plant map, a description of the botanical parts included in the "flower part" is given as well as the flowering stage at which the flower part is harvested, if it is not obvious.
 
-flowerParts
+\subsection{flowerParts}
 Harvested and weighed flower parts, including collections from tagged individuals (once mature or at time of harvest) and from other individuals in the population (to estimate weight of specific plant parts). All plant parts included in a species' "plant map" have weights in this spreadsheet – or, in rare cases, entries are instead plants parts whose weight is used to calculate the weight of a plant part included in a "plant map". (A "plant map" shows the developmental trajectory of a flower or inflorescence from bud to seed for each species, indicating the flow or carbon as well as discarded parts.) If plant parts are collected from a tagged individual, this spreadsheet also indicates in which census periods this specific weight, rather than a species average, should be used for calculating that individual's reproductive investment. Plant parts all have counts and weights, while the subset of plant parts whose size varies, also have columns indicating height and diameter dimensions; the weight of the plant part at a specific size is then determined by either a regression or volume calculation. For a few plant parts, census data measure the length of stem or cone covered with flowers; for these situations, the segment length collected is also recorded, such that the number of flowers per unit length can be calculated.
 
 \subsection{flowerParts\_metadata}
@@ -460,7 +453,7 @@ Brief descriptions of each data column in the file flowerParts, including units.
   print_table_metadata("../../data/flowerParts_meta.csv")
 @
 
-Individuals
+\subsection{Individuals}
 This file contains a list of all plants harvested at the 7 Kuring'gai fieldsites. For each individual it includes basic information about each individual - tag number, age, site, whether the plant was alive at the time of harvest, and information on which calculations use this individual's data. The data itself is contained in other files.
 
 \subsection{Individuals\_metadata}
@@ -470,10 +463,10 @@ Brief descriptions of each data column in the file Individuals, including units.
   print_table_metadata("../../data/Individuals_meta.csv")
 @
 
-multiplierTable
+\subsection{multiplierTable}
 Lookup table indicating, for each species by flower part combination, if the investment per part is for a single (1) or multiple propagules, defined as either a mature fruit or a seed, depending on what is the dispersal unit for each species. Within a single column, i.e. within a single species developmental trajectory, numbers will change if the "count" used to access reproduction changes at a given developmental stage. For instance, with BOLE (Boronia ledifolia), counts are made by flowers up through the finished flower stage, but then fruit are the unit counted and each flower forms 4 fruit.
 
-reproduction
+\subsection{reproduction}
 The reproduction spreadsheet provides both verbal and numeric descriptions of reproduction at each census between April-June 2012 (or June 2013 for Wilunga2013 and the second set of individuals tagged at Waratah2011), when the plants were first tagged, until April-June 2013 (or June 2014 for Wilunga2013 and the second set of individuals tagged at Waratah2011), when the plants were harvested. There is a separate row of data for each individual, at each of the 18 censuses. In addition, at each census, there is a row indicating plant parts that are pre-existing on the plant versus new. Flower (or fruit) parts are considered pre-existing if the predecessor of that flower part, as described on that species "plant map" existed in a previous census period. Some plant maps may have multiple parallel diagrams describing how flower parts develop. In that case, a flower part must have a predecessor on that specific diagram to be considered "pre-existing".
 
 Each of the many plant parts are listed as column headers. At each census, both new and further developed but pre-existing flower parts are recorded. Plant parts that are unchanged in developmental stage between successive censuses are not recorded. Neither are plant parts that disappear between successive censuses. Instead, pre-existing plant parts are recorded if they have progressed to a "more mature" flowering/fruiting stage, as defined by that species "plant map". As an example, if at one census there were 50 PHPH (Phyllota phylicoides) buds recorded and at the next stage, 30 PHPH flowers, 30 of the 50 buds progressed from being buds to being flowers, while the remaining 20 buds were either shed or are still buds. The numbers entered in the cell correspond to either counts, lengths, or dimensions, depending on the method indicated in the file titled "floweringCategories".
@@ -485,7 +478,8 @@ Brief descriptions of the first set of data columns in the file reproduction.
   print_table_metadata("../../data/reproduction_meta.csv")
 @
 
-seedsize
+\subsection{seedsize}
+A collection of species level information, including seed size and embryo-endosperm weight. This file also includes data on the number of ovules per ovary, lifespan, age at maturity, and approximate age at which RA asymptotes.
 
 \subsection{seedsize\_metadata}
 Brief descriptions of the first set of data columns in the file seedsize, including units.
@@ -494,7 +488,7 @@ Brief descriptions of the first set of data columns in the file seedsize, includ
   print_table_metadata("../../data/seedsize_meta.csv")
 @
 
-sites
+\subsection{sites}
 Tables of sites used in study. Includes site names used in other spreadsheets, date of fire, fire year, as defined by NSW fire layers, and UTM coordinates for each site.
 
 \subsection{sites\_metadata}
@@ -504,37 +498,29 @@ Brief descriptions of the first set of data columns in the file sites
   print_table_metadata("../../data/sites_meta.csv")
 @
 
-species
+\subsection{species}
 Table of species included in study. Includes 4-letter code names used in other spreadsheets, scientific names, family names, and common names.
 
+<<echo=FALSE,results='asis'>>=
+  print_table_metadata("../../data/species.csv")
+@
 
 \section{Overview of methods for estimating reproductive allocation}
 
 \subsection{Overview of plant maps}
 
 For each species we established a list of different reproductive tissue parts and mapped how these parts developed through time.
-As the reproductive cycle progresses, tissue parts were repeatedly split into two (or more) parts. For instance, a bud, once open, divides into being petals + stamens, a sepal, and a stigma. As a pollinated stigma develops into a fruit, it will be further divided into seed, seed pod, and potentially additional parts. Along the developmental trajectory, various reproductive tissues are designated as reaching their final development stage, the point in the reproductive cycle where they no longer increase in mass. For some tissues, such as petals, final development is reached long before a mature seed forms, while other tissues, such as the seed and seedpod do not reach final development until the end of the developmental trajectory. 
 
-Each species reproductive tissue development initiates with a bud or inflorescence bud, which increases in size and is divided into multiple tissue types several times during development. The central development axis terminates with the formation of a mature seed, while side branches end in fully developed tissues (such as petals, calyx, pedicel) and aborted tissues (aborted seeds, aborted fruit) at the point where they cease to increase in mass. The developmental flowchart for each species is shown in the maps in the next section.
+
+Each species reproductive tissue development initiates with a bud or inflorescence bud, which increases in size and is divided into multiple tissue types several times during development.For instance, a bud, once open, divides into being petals + stamens, a sepal, and a stigma. As a pollinated stigma develops into a fruit, it will be further divided into seed, seed pod, and potentially additional parts. The central development axis terminates with the formation of a mature seed, while side branches end in fully developed tissues (such as petals, calyx, pedicel) and aborted tissues (aborted seeds, aborted fruit) at the point where they cease to increase in mass. The developmental flowchart for each species is shown in the maps in the next section.
+
 
 The accompanying table for each species provides a list of plant parts, a description of exactly what tissues are included in each plant part and at what developmental stage, the method whereby the count and mass of the plant parts is measured, and the number of ovules in each unit of plant part.
 
 
 \subsection{How the census is completed for each part}
 
-The count of each reproductive tissue type was determined for each individual at each census time. For some reproductive parts a simple count is practical, while for species with a large number of buds (or flowers or fruit) that are regularly spaced along branches, the length of stem covered in buds is a better measure. For species that form cones, the cones can be notably different in size and each cone's dimensions must be recorded throughout development. 
-
-
-- measurements indicating Counts of parts on each individual\\
-- use species level conversions to get number of parts by individual * census\\
-- algorithm which estimates demography of numbers of parts, with respect to map of progression\\
-- convert numbers into weights (BAER\_Investment -- > 4 dataframes in a list, but only FD (= final development of parts) is used, others for error checking)\\
-- group into different categories (BAER\_reproductive costs -- by function `ReproductiveCosts')\\
-  - investment: weight (mg)\\
-  - count (number)\\
-  - costs (mg/successful seed)\\
-  - reference back to groups in paper and in accessoryParts.yml\\
-- at individual level, calculate various proportions and metrics, after combining growth, reproduction, traits ( in `combine\_by\_individual')\\
+The count of each reproductive tissue type was determined for each individual at each census time. For some reproductive parts a simple count is practical, while for species with a large number of buds (or flowers or fruit) that are regularly spaced along branches, the length of stem covered in buds is a better measure. These lengths were converted into counts through a species value of "flowers per length". For species that form cones, the cones can be notably different in size and each cone's dimensions was recorded throughout development. The counts of flowers (or other reproductive tissues) were then converted to a count of ovules using the values in the file multiplierTable.
 
 
 \subsection{How parts weights are determined}
@@ -543,23 +529,69 @@ For all plant parts, a sample of the representative part was collected on other 
 
 For some individuals, actual reproductive parts were collected. This includes any reproductive parts of the plants at the time of harvest, including both current reproductive tissues and previously mature woody fruits still attached to the branches. In additional some seeds were collected once mature, but before they were dispersed. Whenever actual reproductive parts were collected from an individual, the unit mass of these structures was used instead of the population mean. 
 
-\subsection{R scripts used to calculate reproductive investment}
+\section{R scripts used to calculate reproductive investment}
+
+\subsection{preprocess.R}
+
+Includes functions filterBySpecies, which subsets by species, and filterForAllocation, indicating which individuals to use for allocation calculations.
+
+Uses data files: data/individuals.csv
+Output: IndividualsList (by species)
+
+\subsection{OrderedListOfParts.R}
+
+Script defining lists of reproductive parts for each species.
+
+Uses data files: None
+Output: PartsList (by species)
+
+\subsection{FlowerParts.R}
+
+Script to calculate the weights of all reproductive tissues for each individual, including special calculations for:
+
+\begin{enumerate}
+\item determine weights based on dimensions where applicable
+\item individual based weights where applicable
+\end{enumerate}
+
+Uses data files and data frames: data/flowerParts.csv, PartsList (by species)
+Output: PartsSummary (by species)
+
+
+\subsection{GraphRepresentation.R}
+
+Script describing defining the plant maps for each species.
+
+Uses data files and data frames: PartsSummary (by species), data/MultiplierTable.csv
+Output: GraphMaps (by species)
+
+
+\subsection{Investment.R}
+
+Script that combines each species plant map (GraphMaps), weights of flower parts (PartsSummary), and the census data (Reproduction) to calculate the actual investment in reproductive parts.
+
+A key part of the calculation is the algorithm which estimates demography of numbers of parts, with respect to map of progression. That is, if, in census x, a large bud exists, it is assumed that it has developped from a medium sized bud (the previous stage) in census x-1. If in census x-1 no medium buds exists, the large bud is assumed to have developped from a small bud (two stages back). This process continues back along the plant map developmental trajectory until a plausible predecessor is located in the previous census period. After this process is complete, any parts from census x-1 for which a subsequent developmental stage is not identified as designated as having reached their final developmental stage at census x-1 (i.e. they aborted). 
+
+For plant parts, such as petals, that as a final development stage, no success is sought.
+
+There are four dataframes within Investment, but only FD (FinalDevelopment) is used. The others were generated for error checking.
+
+Uses data files and data frames: data/reproduction.csv (and Reproduction), data/floweringCategories.csv (and FloweringCategories), data/multiplierTable.csv (and MultiplierTable), GraphMaps (by species), PartsSummary (by species)
+Output: Investment (by species)
+
+
+\subsection{ReproductionTissues.R}
+
+This script takes the investment data and breaks it down into specific reproductive cost categories based on the data in accessoryParts.yml
+
+Uses data files and data frames: IndividualsList (by species), data/accessoryParts.yml(and InvestmentCategories), Investment (by species),  PartsSummary (by species)
+Output: ReproductiveCosts (by species)
 
 
 \section{Details on calculations by species}
 
 Each species uses notably different algorithms to determine reproductive tissue investment, as each species forms different reproductive tissues and different methods are practical for recording each species' reproductive investment in the field. 
 
-\begin{enumerate}
-\item Something
-\item Something else
-\end{enumerate}
-
-
-\begin{enumerate}
-\item Something
-\item Something else
-\end{enumerate}
 
 \subsection{Banksia ericifolia}
 
