--- a/Analysis-accessory.Rmd
+++ b/Analysis-accessory.Rmd
@@ -311,41 +311,47 @@ write.csv(results, file="ms/Accessory/output/Table03_correlations_with_repro_inv
 
 #Figure 01. predictions
 ```{r}
-png("ms/Accessory/output/Figure01b&c&d_predictions.png", height=3.6, width=9, units="in", res=300)
-par(mfrow=c(1,3), cex=1, omi=c(.1,.1,.05,.2), mai=c(.8,.8,.6,.05))
+png("ms/Accessory/output/Figure01b_predictions.png", height=2.5, width=7.3, units="in", res=300)
+
+windowsFonts(
+  Myriad=windowsFont("Myriad Pro")
+)
+
+
+par(mfrow=c(1,3), cex=1, omi=c(.1,.35,.05,.05), mai=c(.7,.5,.05,.15))
 plot(0,0,ylim=c(0,1),yaxt="n",xaxt="n",xlim=c(0,1),col="white",xlab="",ylab="")
 segments(x0=.2,x1=.9,y0=.9,y1=.2,lty=1)
-axis(1, at=c(0,1),labels=c("lower","higher"),cex.axis=1)
-axis(2, at=c(0,1),labels=c("lower","higher"),cex.axis=1,las=2)
-mtext(text="Trade-off 1:",side=3,outer=FALSE,adj=0,line=1.6)
-mtext(text="Seed count-reproductive costs",side=3,outer=FALSE,adj=0,line=0.7)
-mtext(text="seed count,",side=2,line=1.3,outer=FALSE,cex=0.8)
-mtext(text="scaled to plant size",side=2,line=0.4,outer=FALSE,cex=0.8)
-mtext(text="reproductive costs",side=1,line=0.3,outer=FALSE,cex=0.8)
-mtext(text="(mg/seed)",side=1,line=1.2,outer=FALSE,cex=0.8)
+#axis(3, at=c(0,1),labels=c("lower","higher"),family="Myriad",cex.axis=0.875)
+#axis(2, at=c(0,1),labels=c("lower","higher"),family="Myriad",cex.axis=0.875,las=2)
+#mtext(text="Trade-off 1:",side=3,outer=FALSE,adj=0,line=1.6)
+#mtext(text="Seed count-reproductive costs",side=3,outer=FALSE,adj=0,line=0.7)
+mtext(text="seed count,",side=2,line=1.3,outer=FALSE,family="Myriad",cex=0.875)
+mtext(text="scaled to plant size",side=2,line=0.4,outer=FALSE,family="Myriad",cex=0.875)
+mtext(text="reproductive costs",side=1,line=0.3,outer=FALSE,family="Myriad",cex=0.875)
+mtext(text="(mg/seed)",side=1,line=1.2,outer=FALSE,family="Myriad",cex=0.875)
 
 plot(0,0,ylim=c(0,1),yaxt="n",xaxt="n",xlim=c(0,1),col="white",xlab="",ylab="")
 segments(x0=.1,x1=.8,y0=.8,y1=.1,lty=1)
-axis(1, at=c(0,1),labels=c("lower","higher"),cex.axis=1)
-axis(2, at=c(0,1),labels=c("lower","higher"),cex.axis=1,las=2)
-mtext(text="Trade-off 2.",side=3,outer=FALSE,adj=0,line=1.6)
-mtext(text="Ovule count-pollen attraction costs",side=3,outer=FALSE,adj=0,line=0.7)
-mtext(text="mature ovules count,",side=2,line=1.3,outer=FALSE,cex=0.8)
-mtext(text="scaled to plant size",side=2,line=0.4,outer=FALSE,cex=0.8)
-mtext(text="pollen attraction costs",side=1,line=0.3,outer=FALSE,cex=0.8)
-mtext(text="(mg/seed)",side=1,line=1.2,outer=FALSE,cex=0.8)
+#axis(3, at=c(0,1),labels=c("lower","higher"),family="Myriad",cex.axis=0.875)
+#axis(2, at=c(0,1),labels=c("lower","higher"),cex.axis=1,las=2)
+#mtext(text="Trade-off 2.",side=3,outer=FALSE,adj=0,line=1.6)
+#mtext(text="Ovule count-pollen attraction costs",side=3,outer=FALSE,adj=0,line=0.7)
+mtext(text="mature ovules count,",side=2,line=1.3,outer=FALSE,family="Myriad",cex=0.875)
+mtext(text="scaled to plant size",side=2,line=0.4,outer=FALSE,family="Myriad",cex=0.875)
+mtext(text="pollen attraction costs",side=1,line=0.3,outer=FALSE,family="Myriad",cex=0.875)
+mtext(text="(mg/seed)",side=1,line=1.2,outer=FALSE,family="Myriad",cex=0.875)
 
 plot(0,0,ylim=c(0,1),yaxt="n",xaxt="n",xlim=c(0,1),col="white",xlab="",ylab="")
 segments(x0=.1,x1=.9,y0=.9,y1=.1,lty=1)
-axis(1, at=c(0,1),labels=c("lower","higher"),cex.axis=1)
-axis(2, at=c(0,1),labels=c("lower","higher"),cex.axis=1,las=2)
-mtext(text="Trade-off 3.",side=3,outer=FALSE,adj=0,line=1.6)
-mtext(text="Choosiness-pollen attraction costs",side=3,outer=FALSE,adj=0,line=0.7)
-mtext(text="choosiness",side=2,line=1.3,outer=FALSE,cex=0.8)
-mtext(text="(ovule:seed)",side=2,line=0.4,outer=FALSE,cex=0.8)
-mtext(text="pollen attraction costs,",side=1,line=0.3,outer=FALSE,cex=0.8)
-mtext(text="scaled to plant size",side=1,line=1.2,outer=FALSE,cex=0.8)
-mtext(text="(mg/seed)",side=1,line=2.1,outer=FALSE,cex=0.8)
+#axis(3, at=c(0,1),labels=c("lower","higher"),family="Myriad",cex.axis=0.875)
+#axis(2, at=c(0,1),labels=c("lower","higher"),cex.axis=1,las=2)
+#mtext(text="Trade-off 3.",side=3,outer=FALSE,adj=0,line=1.6)
+#mtext(text="Choosiness-pollen attraction costs",side=3,outer=FALSE,adj=0,line=0.7)
+mtext(text="choosiness",side=2,line=1.3,outer=FALSE,family="Myriad",cex=0.875)
+mtext(text="(ovule:seed)",side=2,line=0.4,outer=FALSE,family="Myriad",cex=0.875)
+mtext(text="pollen attraction costs,",side=1,line=0.3,family="Myriad",cex=0.875)
+mtext(text="scaled to plant size",side=1,line=1.2,family="Myriad",cex=0.875)
+mtext(text="(mg/seed)",side=1,line=2.1,outer=FALSE,family="Myriad",cex=0.875)
 
 dev.off()
 
@@ -409,6 +415,9 @@ line_function_log_xy(SummarySpp[["mean"]]$pollen_attract_costs,mod_ovule,1,col=c
 legend("bottomleft",legend=c("seed count by reproductive costs","mature ovules count by","pollen-attraction costs"),col=c(venetian_red,cerulean,"white"),pch=c(16,16,16),bty="n",cex=0.7)
 extra.top.left.logxy("a",2,1)
 
+mod_seed$groupsummary$r2
+mod_ovule$groupsummary$r2
+
 #panel b
 plot(choosiness2~scaled_pollen_attract_costs,SummarySpp[["mean"]],log="xy",col=cerulean,pch=16,xlim=c(.002,.3),ylim=c(3,800),yaxt="n",cex=1,ylab="",xlab="",xaxt="n")
 axis(2, at=c(10,100,1000), labels=c(10,100,1000),cex.axis=0.8,las=2)
@@ -419,6 +428,8 @@ mtext("choosiness (ovules:seed)",2,line=2.3,cex=0.7)
 mod_choosy2 <- sma(choosiness2~scaled_pollen_attract_costs,data=subset(SummarySpp[["mean"]],species!="EPMI"),log="xy",slope=-1,method="SMA")
 line_function_log_xy(SummarySpp[["mean"]]$scaled_pollen_attract_costs,mod_choosy2,1,col=cerulean)
 extra.top.left.logxy("b",2,1)
+
+mod_choosy2$groupsummary$r2
 
 #panel c - success proportions
 plot(prop_prepollen_success~embryo_endo_costs,SummarySpp[["mean"]],pch=16,log="x",col=cerulean,ylim=c(-.1,1.1),xlim=c(.01,100),xlab="",ylab="",xaxt="n",yaxt="n")
