--- a/ms/Accessory/Wenk-Accessory-SI.Rnw
+++ b/ms/Accessory/Wenk-Accessory-SI.Rnw
@@ -200,7 +200,7 @@ for(i in c(4,7,10)){
 }
 @
 
-\begin{table}[H]
+\begin{table}[h]
 \centering
 \caption{Testing for shifts in accessory costs with in age, plant size, or reproductive effort. Shifts in accessory costs with these variables is suggested as one possible explanation of increasing reproductive investment in larger, older plants, but such a trend did not exist in these data.}
 \label{tab:access_vs_age}
@@ -261,7 +261,7 @@ for(i in c(4,7)){
 }
 @
 
-\begin{table}[H]
+\begin{table}[h]
 \centering
 \caption{Intraspecific correlations between total reproductive investment and (a) propagule investment and (b) flower investment, where flower investment is defined as 'flower weight $\times$ bud count'. Due to the high proportion of aborted flowers, flower investment was a better proxy of reproductive investment than was propagule investment. This was true both across species (Figure 3, Table 3 in the main text) and within species, as is shown here.}
 \label{tab:propagule_invest_vs_repro}
@@ -332,7 +332,7 @@ names(TableS19) <- c("Costs","r$^2$","Slope (95$\\%$ CI)","p (slope test)")
 TableS19$Costs <- firstup(TableS19$Costs)
 
 @
-\begin{table}[H]
+\begin{table}[h]
 \centering
 \caption{Scaling of reproductive tissue costs with total propagule size. In this manuscript all "seed size" calculations use embryo and endosperm size, not propagule size. Most previous research has used propagule size as a measure of "seed size" and noted isometric relationships between various tissue costs and "seed size". Using embryo and endosperm size, these relationship did not exist for this data set, but are present if "seed size" includes the entire propagule.}
 \label{tab:repro_tissues_vs_prop_size}
